plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'nu.studer.jooq' version '8.1'
}

group = 'com.shakur'
version = '0.0.1-SNAPSHOT'
description = 'Cafehelp'
ext['testcontainers.version'] = '1.21.4'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java/jooq'
        }
    }
}

repositories {
    mavenCentral()
}
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-jooq'
    jooqGenerator "org.postgresql:postgresql"
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter:1.21.4'
    testImplementation 'org.testcontainers:postgresql:1.21.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    jooqGenerator "org.jooq:jooq-codegen:3.19.9"
    jooqGenerator "org.jooq:jooq-meta:3.19.9"
    jooqGenerator "org.jooq:jooq-meta-extensions:3.19.9"
    jooqGenerator "org.postgresql:postgresql:42.7.3"

    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'jakarta.el:jakarta.el-api:5.0.0'
    runtimeOnly 'org.glassfish:jakarta.el:3.0.4'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
    implementation 'io.minio:minio:8.5.14'
}
jooq {
    version = "3.19.9"
    configurations {
        main {
            generateSchemaSourceOnCompilation = false
            generationTool {
                logging = 'WARN'
                jdbc {
                    driver = 'org.postgresql.Driver'
                    url = "jdbc:postgresql://localhost:5432/postgres"
                    user = "postgres"
                    password = "2002"
                }
                generator {
                    name = 'org.jooq.codegen.JavaGenerator'
                    database {
                        name = 'org.jooq.meta.postgres.PostgresDatabase'
                        includes = '.*'
                        excludes = '^(Fly|XFly).*'
                        schemata {
                            schema {
                                inputSchema = "sales"
                            }
                        }
                    }
                    target {
                        packageName = 'jooqdata'
                        directory = "src/main/java/jooq"
                    }
                    generate {
                        newline = '\\r\\n'
                        javaTimeTypes = true
                        records = true
                        relations = true
                        daos = false
                        deprecated = false
                        instanceFields = true
                    }
                    strategy.name = "org.jooq.codegen.DefaultGeneratorStrategy"
                }
            }
        }
    }
}


tasks.named('test') {
    useJUnitPlatform()
}
